--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -12,7 +12,7 @@
       <img src="assets/img/ica-slidebox-img-1.png" class="slide-image" />
       <h2 class="slide-title">
         Welcome to
-        <b>Lab Cap by ara</b>
+        <b>Lab Cap by ara 6</b>
       </h2>
       <p>
         The
