--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
           </ion-menu-toggle>
         </ion-list>
 
-        <ion-list *ngIf="loggedIn" lines="none">
+        <ion-list lines="none">
           <ion-list-header>
             Account
           </ion-list-header>
@@ -83,7 +83,7 @@
 
         </ion-list>
 
-        <ion-list *ngIf="!loggedIn" lines="none">
+        <ion-list lines="none">
           <ion-list-header>
             Account
           </ion-list-header>
