--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,12 @@
                 Camera
               </ion-label>
             </ion-item>
+            <ion-item routerLink="/device" routerLinkActive="active" routerDirection="root" detail="false">
+              <ion-icon slot="start" name="hammer"></ion-icon>
+              <ion-label>
+                Device
+              </ion-label>
+            </ion-item>
           </ion-menu-toggle>
         </ion-list>
     
